--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <header class="header">
   <div class="header-items">
     <div class="header-item" routerLink="/">UniLend</div>
-    <div class="header-item" routerLink='/'>Rent</div>
-    <div class="header-item" routerLink='/'>Lend</div>
+    <div class="header-item" routerLink='/rent'>Rent</div>
+    <div class="header-item" routerLink='/lend'>Lend</div>
+    <div class="header-item" routerLink='/profile'>My NFTs</div>
   </div>
 </header>
 
