--- a/src/styles.css
+++ b/src/styles.css
@@ -261,7 +261,7 @@ a:focus-visible {
 	border-radius: 0.5rem;
 	overflow: hidden;
 	color: #fff;
-	background: #54BFE4;
+	background: #ff007b;
 }
 
 .button--mimas span {
