Feat: final touches

--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -19,7 +19,7 @@
         <span *ngIf="loading"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
     </button>
     <button *ngIf="!listing.renter && !isOwner && !isRenter" (click)="purchaseListing()" class="rent-btn button button--mimas">
-        <span *ngIf="!loading">Rent</span>
+        <span *ngIf="!loading">Rent Liquidity</span>
         <span *ngIf="loading"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
     </button>
     <p *ngIf="loading">Transaction in progress...</p>
