Feat: final touches

--- a/src/app/components/new-listing/new-listing.component.html
+++ b/src/app/components/new-listing/new-listing.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="centered" (click)="submitForm()">
             <button  class="button button--mimas">
-                <span>Create New Session</span>
+                <span>Create New Listing</span>
                 <!-- <span *ngIf="loading"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span> -->
             </button>
         </div>
