--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .header {
     position: sticky;
-    top: 0;
+    top: 10px;
     z-index: 1000;
   }
 
@@ -8,8 +8,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    background-color: rgba(0, 0, 0, 0.85);
-    color: white;
+    background-color: rgba(237,238,242, .9);
+    /* background-color: #f2f3f4; */
+    font-weight: 600;
+    color: rgba(0,0,0,.6);
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 14px;
   }
 
   .sticky {
@@ -22,14 +27,12 @@
     cursor: pointer;
     font-size: 15px;
     line-height: 3.14286;
-    font-weight: 400;
-    letter-spacing: .03em;
     font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-    color: #f5f5f7;
     position: relative;
     z-index: 1;
-    display: inline-block;
-    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 1em;
     opacity: .8;
     background: no-repeat;
     text-decoration: none;
@@ -42,11 +45,34 @@
     border: none;
     outline: 0;
     -moz-outline-style: none;
+    border-radius: .8em;
+    margin: 5px;
+  }
+
+  .header-item span {
+    line-height: 2.5;
   }
 
   .header-item:hover {
-    color: rgb(255, 255, 255);
-    opacity: 1;
+    color: #000;
+  }
+
+  .header-item i {
+    background: linear-gradient(230deg, rgb(255, 0, 123) 0%, rgb(182, 80, 158) 100%) !important;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 5em;
+    bottom: -1px;
+    height: 3px;
+    transition: all 0.4s ease 0s;
+    border-radius: 2px;
+  }
+
+  .active {
+    color: #000;
+    font-weight: 700 !important;
+    background-color: rgba(200, 200, 200, .7);
   }
 
   .object-fit {
