--- a/src/app/components/listings/listings.component.html
+++ b/src/app/components/listings/listings.component.html
@@ -1,7 +1,13 @@
+<div class="centered">
+    <p *ngIf="loading || listings.length > 0" class="title">
+        Liquidity for Rent
+    </p>
+    <p class="title" *ngIf="!listings.length && !loading">No listings :(</p>
+</div>
 <div class="centered listings-div">
     <div class="listing" *ngFor="let listing of listings">
         <app-listing (updateEvent)="getListings()" [listing]="listing" [isRenter]="false" [isOwner]="false"></app-listing>
     </div>
-    <p class="title" *ngIf="!listings.length">No listings :(</p>
-    <p *ngIf="loading">Transaction in progress...</p>
+    <span *ngIf="loading && !listings.length"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
+    <p *ngIf="loading && listings.length">Transaction in progress...</p>
 </div>
