--- a/src/app/components/listings/listings.component.html
+++ b/src/app/components/listings/listings.component.html
@@ -4,8 +4,80 @@
     </p>
     <p class="title" *ngIf="!listings.length && !loading">No Listings :c</p>
 </div>
+<div class="centered">
+    <table class="styled-table" *ngIf="listings.length > 0">
+        <thead>
+            <tr>
+                <th>Token 1</th>
+                <th>Token 2</th>
+                <th>Fee</th>
+                <th>Price (ETH)</th>
+                <th>Duration</th>
+                <th>ID</th>
+            </tr>
+        </thead>
+        <tbody class="row">
+            <tr>
+                <td>
+                    <input class="search small" [(ngModel)]="searchFields[0]" 
+                        name="token1" type="text" placeholder="Token 1"
+                        (input)="search()" autocomplete="off"
+                    >
+                </td>
+                <td>
+                    <input class="search small" [(ngModel)]="searchFields[1]" 
+                        name="token2" type="text" placeholder="Token 2"
+                        (input)="search()" autocomplete="off"
+                    >
+                </td>
+                <td>
+                    <select (change)="search()" [(ngModel)]="searchFields[2]">
+                        <option value="0.05">0.05%</option>
+                        <option value="0.3" selected>0.3%</option>
+                        <option value="1">1%</option>
+                    </select>
+                </td>
+                <td>
+                    <select (change)="search()" [(ngModel)]="operators[0]">
+                        <option value="=">=</option>
+                        <option value="<" selected><</option>
+                        <option value=">">></option>
+                    </select>
+                    <input class="search small" [(ngModel)]="searchFields[3]" 
+                        name="priceInEth" min="0" type="text" placeholder="Price (ETH)"
+                        (input)="search()" autocomplete="off"
+                    >
+                </td>
+                <td>
+                    <select (change)="search()" [(ngModel)]="operators[1]">
+                        <option value="=">=</option>
+                        <option value="<" selected><</option>
+                        <option value=">">></option>
+                    </select>
+                    <input class="search small" [(ngModel)]="searchFields[4]" 
+                        name="Duration" type="text" placeholder="Duration"
+                        (input)="search()" autocomplete="off"
+                    >
+                    <select (change)="search()" [(ngModel)]="searchFields[5]">
+                        <option value="w">Weeks</option>
+                        <option value="d" selected>Days</option>
+                        <option value="h">Hours</option>
+                        <option value="m">Minutes</option>
+                        <option value="s">Seconds</option>
+                    </select>
+                </td>
+                <td>
+                    <input class="search small" [(ngModel)]="searchFields[6]" 
+                        name="runtime" type="text" placeholder="ID"
+                        (input)="search()" autocomplete="off"
+                    >
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 <div class="centered listings-div">
-    <div class="listing" *ngFor="let listing of listings">
+    <div class="listing" *ngFor="let listing of visibleListings">
         <app-listing 
             (updateEvent)="getListings()" 
             [listing]="listing" 
