--- a/src/styles.css
+++ b/src/styles.css
@@ -435,6 +435,9 @@ a:focus-visible {
   margin: 0 auto;
 }
 
+table {
+	border-radius: 10px;
+}
 .styled-table {
     border-collapse: collapse;
     margin: 15px auto 25px auto;
@@ -443,8 +446,9 @@ a:focus-visible {
   }
   
   .styled-table thead tr {
-    background-color: #54BFE4;
-    color: #ffffff;
+    background-color: rgba(237,238,242, .9);
+	border-radius: 10px;
+    color: rgb(138,141,153);
     text-align: left;
   }
   
@@ -454,6 +458,7 @@ a:focus-visible {
   }
   .styled-table tbody tr {
     border-bottom: thin solid #dddddd;
+	border-radius: 10px;
   }
   
   .styled-table tbody tr:nth-of-type(even) {
@@ -462,6 +467,10 @@ a:focus-visible {
   
   .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #54BFE4;
+  }
+
+  .styled-table th:hover {
+	  color: #000;
   }
   
   .row tr:hover {
