--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,34 +1,12 @@
 <div>
-    <p class="title">Uniswap Liquidity Lending</p>
-    <div class="centered">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Uniswap_Logo_and_Wordmark.svg/800px-Uniswap_Logo_and_Wordmark.svg.png">
-    </div>
-    <p>Rent liquidity from liquidity providers. Lend liquidity to others.</p>
+    <p class="title">Caravan</p>
+    <p>Rent liquidity from liquidity providers. Lend liquidity to others. Trade liquidity positions with other providers.</p>
     <div class="centered">
         <button routerLink="/rent" class="button button--mimas">
             <span>See Listings</span>
         </button>
     </div>
-    <img *ngIf="nftSvg" [src]="nftSvg">
 </div>
-
-<!-- <div>
-    <p class="title">Uniswap Liquidity Lending</p>
-    <p>Rent liquidity from liquidity providers. Lend liquidity to others.</p>
-    <div class="centered">
-        <p>
-            {{amountToEnter}}
-            <input [(ngModel)]="amountToEnter" placeholder="Amount in ether"/>
-        </p>
-        <button (click)="enterLottery()" class="button button--mimas">
-            <span>See Listings</span>
-        </button>
-        {{status}}
-    </div>
-    <p>Manager: {{manager}}</p>
-    <p>Players: {{players}}</p>
-    <p>Amount to win: {{balance}}</p>
-</div> -->
 
 
 
