--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,10 @@ body {
     line-height: 1.4211;
     font-weight: 400;
     letter-spacing: .012em;
-    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-    color: #1d1d1f;
+    font-family: "SF Pro Display","Roboto", "SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    color: rgb(138,141,153);/*#1d1d1f; */
     margin: 0;
+	background-color: #fefdff !important;
   }
   
   .title {
@@ -16,7 +17,7 @@ body {
     font-weight: 500;
     letter-spacing: -.002em;
     text-align: center;
-    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-family: "SF Pro Display", "Roboto", "SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   }
 
   p {
@@ -59,7 +60,7 @@ button:focus-visible {
 
 body {
 	margin: 0;
-	--color-text: #111;
+	--color-text: #1d1d1f;
 	--color-number: #999;
 	--color-bg: #fff;
 	--color-link: #1352d1;
@@ -262,6 +263,7 @@ a:focus-visible {
 	overflow: hidden;
 	color: #fff;
 	background: #ff007b;
+	padding: 1.25em 4em;
 }
 
 .button--mimas span {
@@ -433,6 +435,9 @@ a:focus-visible {
   margin: 0 auto;
 }
 
+table {
+	border-radius: 10px;
+}
 .styled-table {
     border-collapse: collapse;
     margin: 15px auto 25px auto;
@@ -441,8 +446,9 @@ a:focus-visible {
   }
   
   .styled-table thead tr {
-    background-color: #54BFE4;
-    color: #ffffff;
+    background-color: rgba(237,238,242, .9);
+	border-radius: 10px;
+    color: rgb(138,141,153);
     text-align: left;
   }
   
@@ -452,6 +458,7 @@ a:focus-visible {
   }
   .styled-table tbody tr {
     border-bottom: thin solid #dddddd;
+	border-radius: 10px;
   }
   
   .styled-table tbody tr:nth-of-type(even) {
@@ -460,6 +467,10 @@ a:focus-visible {
   
   .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #54BFE4;
+  }
+
+  .styled-table th:hover {
+	  color: #000;
   }
   
   .row tr:hover {
