--- a/src/app/components/listings/listings.component.css
+++ b/src/app/components/listings/listings.component.css
@@ -1,8 +1,3 @@
-.listing {
-    background-color:gainsboro;
-    margin: 10px;
-}
-
 .listings-div {
     display: flex;
     flex-direction: column;
@@ -12,4 +7,51 @@
 
 .rent-btn {
     margin: 10px;
+}
+
+.example-form-field {
+    width: 200px;
+  }
+
+  button {
+      border: none;
+      background-color: initial;
+  }
+
+  .top-padding {
+    padding-top: 20px;
+}
+
+.small-padding {
+    padding: 10px;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: none;
+}
+
+.error-txt {
+    color: #a94442;
+    font-size: 12px;
+}
+
+.search-icon {
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+th, td {
+    font-size: 14px;
+}
+
+.small {
+    width: 75px;
+}
+
+.big {
+    width: 150px;
+}
+
+.fill {
+    width: -webkit-fill-available;
 }
