--- a/src/styles.css
+++ b/src/styles.css
@@ -274,6 +274,7 @@ a:focus-visible {
 	content: '';
 	background: #000;
 	width: 120%;
+	height: 120%;
 	left: -10%;
 	transform: skew(30deg);
 	transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
