Add about section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,80 @@
 <div>
-    <p class="title">Caravan</p>
-    <p>Rent liquidity from liquidity providers. Lend liquidity to others. Trade liquidity positions with other providers.</p>
+    <p class="title">
+        Caravan
+        <br>
+        <span class="subtitle">
+            A whole new market for liquidity positions.
+            <br>
+            Rent liquidity from liquidity providers. 
+            <br>
+            Lend liquidity to others.
+        </span>
+    </p>
     <div class="centered">
         <button routerLink="/rent" class="button button--mimas">
             <span>See Listings</span>
         </button>
     </div>
+    <br>
+    <div class="centered about">
+        <p class="subtitle">
+            How It Works
+        </p>
+        <div class="text-div">
+            <p class="textblock ">
+                Liquidity providers can lend out their positions for a short amount of time to renters, 
+                <br>
+                who are able to collect fees from the position for the duration of the rental. 
+                <br>
+                Lenders will be able to hold their positions long term but still receive short term cash flow. 
+                <br>
+                Renters can profit by renting positions when trading volume is high.
+            </p>
+        </div>
+        
+        <p class="subtitle">
+            For Liquidity Providers
+        </p>
+        <div class="text-div">
+            <p class="textblock">
+                • Explore innovative new ways to yield farm on liquidity positions
+                <br>
+                • Generate cash flow on liquidity positions without risk since payment is received upfront
+                <br>
+                • Hedge against short term downside volatility while keeping tokens long term
+                <br>
+                • Trade positions with other liquidity providers without having to pull tokens out of the pool
+            </p>
+        </div>
+        
+        <p class="subtitle">
+            For Liquidity Renters
+        </p>
+        <div class="text-div">
+            <p class="textblock">
+                • Speculate on the short term liquidity market
+                <br>
+                • Hedge long term positions by renting concentrated liquidity at a lower price range
+                <br>
+                • Gain exposure to liquidity positions without needing to hold actual tokens
+            </p>
+        </div>
+
+        <p class="subtitle">
+            About The Developers
+        </p>
+        <div class="text-div">
+            <p class="textblock center-text">
+                We are Andrew and Jwalin, a team of two. 
+                <br>
+                We are 3rd and 4th year students at UC Berkeley studying CS.
+                <br>
+                We hope to take Caravan to the moon and beyond!
+            </p>
+        </div>
+        
+    </div>
+    
 </div>
 
 
