--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -1,4 +1,5 @@
-<div class="listing" [routerLink]="'/listing/' + listing.tokenId">
+<div class="listing">
+    <!-- [routerLink]="'/listing/' + listing.tokenId" -->
     <div class="listing-fields">
         <div class="image-div">
             <img class="nft-image" *ngIf="nftSvg" [src]="nftSvg">
