--- a/src/styles.css
+++ b/src/styles.css
@@ -273,7 +273,8 @@ a:focus-visible {
 .button--mimas::before {
 	content: '';
 	background: #000;
-	width: 120%;
+	width: 150%;
+	height: 120%;
 	left: -10%;
 	transform: skew(30deg);
 	transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
