--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,11 +3,11 @@
         Caravan
         <br>
         <span class="subtitle">
-            A whole new market for liquidity positions.
+            A new market for liquidity positions.
             <br>
             Rent liquidity from liquidity providers. 
             <br>
-            Lend liquidity to others.
+            Rent liquidity to others.
         </span>
     </p>
     <div class="centered">
@@ -22,13 +22,13 @@
         </p>
         <div class="text-div">
             <p class="textblock ">
-                Liquidity providers can lend out their positions for a short amount of time to renters, 
+                Liquidity providers can rent out their positions for a fixed duration for an up-front lump sum to renters, 
                 <br>
                 who are able to collect fees from the position for the duration of the rental. 
                 <br>
-                Lenders will be able to hold their positions long term but still receive short term cash flow. 
+                Providers will be able to hold their positions long term but  receive guaranteed cash flow in the short term. 
                 <br>
-                Renters can profit by renting positions when trading volume is high.
+                Renters can profit by collecting fees from positions without holding the underlying assets.
             </p>
         </div>
         
@@ -39,7 +39,7 @@
             <p class="textblock">
                 • Explore innovative new ways to yield farm on liquidity positions
                 <br>
-                • Generate cash flow on liquidity positions without risk since payment is received upfront
+                • Generate cash flow on liquidity positions without risk
                 <br>
                 • Hedge against short term downside volatility while keeping tokens long term
                 <br>
