--- a/src/app/components/sales/sale-listing/sale-listing.component.html
+++ b/src/app/components/sales/sale-listing/sale-listing.component.html
@@ -11,12 +11,12 @@
                 {{listing.priceInEther}} (${{(listing.priceInEther * ethPrice).toFixed(2)}})
             </p>
             <p>{{listing.position.priceRange[0].lower}} - {{listing.position.priceRange[0].upper}}</p>
-            <p *ngIf="listing.seller">Owned by {{listing.originalOwner}}</p>
+            <p *ngIf="listing.originalOwner">Owned by {{listing.originalOwner}}</p>
             <p>#{{listing.tokenId}}</p>
         </div>
     </div>
     <div>
-        <button *ngIf="isOwner && !listing.expiryDate" (click)="removeListing()" class="sales-btn button button--mimas">
+        <button *ngIf="isOwner" (click)="removeListing()" class="sales-btn button button--mimas">
             <span *ngIf="!loading">Remove</span>
             <span *ngIf="loading"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
         </button>
