--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,14 @@
       <span class="centered">Lend</span>
       <!-- <i *ngIf="route == '/lend'"></i> -->
     </div>
+    <div class="header-item" [ngClass]="{ 'active' : route == '/buy' }" routerLink='/buy'>
+      <span class="centered">Buy</span>
+      <!-- <i *ngIf="route == '/buy'"></i> -->
+    </div>
+    <div class="header-item" [ngClass]="{ 'active' : route == '/sell' }" routerLink='/sell'>
+      <span class="centered">Sell</span>
+      <!-- <i *ngIf="route == '/sell'"></i> -->
+    </div>
     <div class="header-item" [ngClass]="{ 'active' : route == '/profile' }" routerLink='/profile'>
       <span class="centered">My NFTs</span>
       <!-- <i *ngIf="route == '/profile'"></i> -->
